# SDL2-Vulkan-GameEngine

./: .gitignore  CMakeLists.txt  README.md  version.hpp
game/: CMakeLists.txt
game/headers/: CMakeLists.txt  game.hpp  game_state.hpp  sdl_wrapper.hpp  server_world.hpp  vulkan_wrapper.hpp
game/src/: CMakeLists.txt  game.cpp  main.cpp  sdl_wrapper.cpp  server_world.cpp  vulkan_wrapper.cpp
game/src/shaders/: shader_vertexbuffer.vert
game_engine/: CMakeLists.txt
game_engine/headers/: CMakeLists.txt  game_engine.hpp
game_engine/headers/audio/: CMakeLists.txt  audio.hpp
game_engine/headers/core/: CMakeLists.txt  component_manager.hpp  core.hpp  entity_manager.hpp  resource_manager.hpp  scene_manager.hpp  system_manager.hpp
game_engine/headers/math/: CMakeLists.txt
game_engine/headers/physics/: CMakeLists.txt
game_engine/headers/rendering/: CMakeLists.txt  renderer.hpp
game_engine/headers/utils/: CMakeLists.txt  utils.hpp
game_engine/src/: CMakeLists.txt  game_engine.cpp
game_engine/src/audio/: CMakeLists.txt  audio.cpp
game_engine/src/core/: CMakeLists.txt  component_manager.cpp  core.cpp  entity_manager.cpp  resource_manager.cpp  scene_manager.cpp  system_manager.cpp
game_engine/src/math/: CMakeLists.txt
game_engine/src/physics/: CMakeLists.txt  collision_detector.cpp
game_engine/src/rendering/: CMakeLists.txt  renderer.cpp
game_engine/src/utils/: CMakeLists.txt  utils.cpp
game_start/: CMakeLists.txt
game_start/headers/: CMakeLists.txt  game_engine.hpp
game_start/headers/audio/: CMakeLists.txt
game_start/headers/core/: CMakeLists.txt  component_manager.hpp  core.hpp  entity_manager.hpp  resource_manager.hpp  scene_manager.hpp  system_manager.hpp
game_start/headers/math/: CMakeLists.txt  math.hpp
game_start/headers/physics/: CMakeLists.txt  collision_detector.hpp  physics.hpp
game_start/headers/renderer/: CMakeLists.txt  renderer.hpp
game_start/headers/utils/: CMakeLists.txt  utils.hpp
game_start/src/: CMakeLists.txt  game_engine.cpp  main.cpp
game_start/src/audio/: CMakeLists.txt
game_start/src/core/: CMakeLists.txt  component_manager.cpp  core.cpp  entity_manager.cpp  resource_manager.cpp  scene_manager.cpp  system_manager.cpp
game_start/src/math/: CMakeLists.txt  math.cpp
game_start/src/physics/: CMakeLists.txt  physics.cpp
game_start/src/renderer/: CMakeLists.txt  renderer.cpp
game_start/src/utils/: CMakeLists.txt  utils.cpp
